# DemoMan

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .stylelintrc  Cargo.toml  babel.config.js  biome.jsonc  index.html  package-lock.json  package.json  readme.md  rustfmt.toml  tsconfig.json  vite.config.ts
.erb/configs/: webpack.config.renderer.dev.ts
.github/: FUNDING.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-pr.yml  codeql-analysis.yml  release.yml
assets/: assets.d.ts  icon.icns
githubassets/: Banner.xcf  SocialPreview.xcf
release/app/: package-lock.json  package.json
src/: App.global.css  App.module.css  App.tsx  AppShell.module.css  AppShell.tsx  Async.tsx  AutoDeleteDialog.tsx  BounceTransition.tsx  ConvertPrecEvents.ts  DeleteDialog.tsx  Demo.ts  DemoDetailsList.tsx  DemoDetailsView.tsx  DemoEvent.ts  DemoListEntry.ts  DemoMetadataList.tsx  DemoTable.tsx  Demos.ts  DemosContext.ts  DemosProvider.tsx  EditEventDialog.tsx  EventTable.tsx  EventTableEntry.tsx  Fill.tsx  FullscreenDialog.tsx  GetDemoPath.ts  InfoDialog.tsx  MainView.tsx  MapThumbnail.tsx  PageLayout.tsx  Rcon.ts  RconContext.tsx  RenameDialog.tsx  SelectDemoPathDialog.tsx  SelectDemoPathModal.tsx  SettingsDialog.tsx  SettingsView.tsx  SetupView.tsx  SmallDialog.tsx  Theming.tsx  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  demo_cache.rs  disk_cache.rs  main.rs  parsed_demo_cache.rs  std_ext.rs  traits.rs
src-tauri/src/commands/: cli.rs  demos.rs  files.rs  launch_tf2.rs  logging.rs  mod.rs  rcon.rs
src-tauri/src/demo/: cache.rs  error.rs  errors.rs  mod.rs
src-tauri/src/demo/analyser/: custom_damage.rs  damage_flag.rs  mod.rs  player_condition.rs  player_flag.rs  weapon_class.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/tests/data/demos/: random.dem  test_demo.json
src/__tests__/: App.test.tsx
src/assets/translations/: capture_points.json
src/common/: store.ts
src/components/: Async.tsx  AsyncButton.tsx  AsyncCopyButton.tsx  ClassIcon.tsx  Fill.tsx  HeaderButton.module.css  HeaderButton.tsx  KillIcon.tsx  KillIconData.tsx  KillstreakIcon.tsx  LoaderFallback.tsx  MapThumbnail.tsx  NavigationProgress.tsx  RconIndicator.tsx  icons.tsx  index.ts
src/hooks/: useLocationRef.ts  useLocationState.tsx  useStore.ts
src/main/: main.ts  util.ts
src/modals/: DeleteDemoModal.tsx  DeleteMultipleDemosModal.tsx  DemoDirModal.tsx  RenameDemoModal.tsx  UpdateModal.tsx  index.tsx
src/renderer/: AboutDialog.tsx  App.css  App.tsx  AppBar.tsx  AppBarButton.tsx  AppBarMenu.tsx  AutoDeleteDialog.tsx  BounceTransition.tsx  ConvertPrecEvents.ts  DeleteDialog.tsx  Demo.ts  DemoDetailsView.tsx  DemoHeader.ts  DemoMetadataList.tsx  DemoTable.tsx  DemosContext.ts  DemosProvider.tsx  EditEventDialog.tsx  EventTable.tsx  GetDemoPath.ts  HelpButton.tsx  InfoDialog.tsx  Kbd.tsx  MainView.tsx  MapThumbnail.tsx  MapThumbnailSources.ts  PageLayout.tsx  PrecConversion.ts  Rcon.ts  RenameDialog.tsx  SettingsView.tsx  SetupView.tsx  SmallDialog.tsx  SplitButton.tsx  StreamReader.ts  ThemeContext.ts  Theming.tsx  getDemosInDirectory.ts  index.tsx  react-motion.d.ts  (+2 more)
src/renderer/AdvancedSearchInput/: DropdownItem.tsx  QueryItemChips.tsx  index.tsx  types.ts
src/renderer/DemoDetailsView/: DeleteDialog.tsx  DemoMetadataList.tsx  EditEventDialog.tsx  EventTable.tsx  MapThumbnail.tsx  MapThumbnailSources.ts  RenameDialog.tsx  index.tsx
src/renderer/MainView/: AboutDialog.tsx  AutoDeleteDialog.tsx  ConvertPrecEvents.ts  ConvertPrecFileDialog.tsx  DemoTable.tsx  InfoDialog.tsx  UpdateIndicator.tsx  index.tsx
src/renderer/hooks/: useStore.ts
src/routes/: AboutRoute.css  AboutRoute.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  IndexRoute.tsx  LocationOverlay.tsx  RootRoute.css  RootRoute.module.css  RootRoute.tsx  router.tsx
src/routes/demoDetails/: HighlightBox.tsx  index.tsx
src/routes/demos/: DemoDirButton.module.css  DemoDirButton.tsx  index.tsx
src/routes/home/: BottomBar.module.css  BottomBar.tsx  DemoListRow.tsx  index.tsx
src/routes/rconConsole/: RconConsole.module.css  index.tsx
src/routes/rconSetup/: index.tsx
src/routes/settings/: BooleanSetting.tsx  DemoDirsSetting.tsx  PathPicker.tsx  index.tsx  settings.module.css  storage.ts
src/views/demoDetails/: HighlightBox.module.css  HighlightBox.tsx  Highlights.tsx  Timeline.tsx  demoDetails.module.css  (+1 more)
(+81 files in other folders)
