[package]
name = "demoman"
version = "0.1.0"
description = "The TF2 Demo Manager"
authors = ["Narcha"]
license = "GPL-3.0-only"
repository = "https://github.com/Narcha/DemoMan-tauri"
default-run = "demoman"
edition = "2021"
rust-version = "1.57"


[build-dependencies]
tauri-build = { version = "^1.2", features = [] }

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
tauri = { version = "^1.2", features = ["api-all"] }
log = "^0.4"
bitbuffer = "0.10.9"
trash = "3.0.0"
steamid-ng = "1.0.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
tokio = "^1.0"

[dependencies.tf-demo-parser]
git = "https://github.com/demostf/parser"
rev = "d82555e58adfe0a03c66a80d94bc141c1599cb91"

[dependencies.tauri-plugin-log]
# To be replaced by a proper package when it becomes available
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
