[package]
name = "demoman"
version = "0.1.0"
description = "The TF2 Demo Manager"
authors = ["Narcha"]
license = "GPL-3.0-only"
repository = "https://github.com/Narcha/DemoMan-tauri"
default-run = "demoman"
edition = "2021"
rust-version = "1.71"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
bincode = "1.3.3"
bitbuffer = "0.10"
cacache = { version = "12.0.0", default-features = false, features = ["tokio-runtime", "mmap"] }
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
rcon = { version = "0.6", features = ["rt-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
steamid-ng = "1.0"
steamlocate = "1.2"
tauri = { version = "1.5", features = ["api-all"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
    "colored",
] }
tf-demo-parser = { git = "https://github.com/demostf/parser", rev = "92d9be233ca8b8dc56b891629f67b99ad7883f2a" }
tokio = "1.31"
trash = "3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
