[package]
name = "demoman"
version = "2.0.0-alpha.6"
description = "The TF2 Demo Manager"
authors = ["DemoMan contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/DemomanApp/DemoMan"
default-run = "demoman"
edition = "2021"
rust-version = "1.76"

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
bincode = "1.3.3"
bitbuffer = "0.10"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
rcon = { version = "0.6", features = ["rt-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
steamid-ng = "1.0"
steamlocate = "2.0"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = { features = ["colored"], version = "2" }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tf-demo-parser = "0.5.1"
thiserror = "1.0"
tokio = { version = "1.43", features = ["rt", "macros"] }
trash = "5.0"
wyhash = "0.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
